infra/argo/applications/kube-ops-view/route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kube-ops-view-route
spec:
  parentRefs:
  - kind: Gateway
    sectionName: https
    namespace: gateway
    name: external-http
  hostnames:
  - "kube-ops-view.platform.dev.everycure.org"
  rules:
  - backendRefs:
    - name: kube-ops-view
      port: 80
